[package]
name = "momoa"
version = "3.1.1"
description = "A JSON parsing library suitable for static analysis"
authors = ["Nicholas C. Zakas"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/humanwhocodes/momoa"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
test-case = "3.0.0"
serde_json = "1"
glob = "0"
